# r2drop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  R2Drop-Requirements.md  README.md  ROADMAP.md
.github/workflows/: appstore.yml  ci.yml  cli-release.yml  deploy-www.yml  release.yml  testflight.yml
app/: .gitignore  CLI.md  Makefile  README.md  RELEASE.md  TELEMETRY.md  TODO.md
app/.beads/: .gitignore  issues.jsonl
app/.ralph-tui/: progress.md  session-meta.json
app/R2Drop/: Info.plist  R2Drop.entitlements  project.yml
app/R2Drop.xcworkspace/: contents.xcworkspacedata
app/engine/: rust-toolchain.toml
app/engine/r2-cli/: Cargo.toml
app/engine/r2-cli/src/: accounts.rs  config_cmd.rs  history_cmd.rs
app/engine/r2-ffi/: Cargo.toml  cbindgen.toml  r2_ffi.h
app/fastlane/: Appfile  README.md
app/scripts/: build-rust.sh  generate-dmg.sh
art/: r2-drop-logo.psd  r2drop-1024.psd  r2drop-2.mov  r2drop-3.mov
docs/: README.md
gitbook/: README.md  SUMMARY.md
gitbook/cli/: README.md  authentication.md  commands.md  installation.md
gitbook/desktop-app/: queue-and-history.md  settings.md
gitbook/getting-started/: installation.md  troubleshooting.md
gitbook/legal/: privacy.md  terms.md
gitbook/reference/: architecture.md  config.md  deep-links.md
homebrew/: README.md
homebrew/Casks/: r2drop.rb
homebrew/Formula/: r2-cli.rb  r2drop.rb
releases/: v0.1.0.md  v0.1.1.md
scripts/: install.sh
src/: CLAUDE.md  LICENSE
src/app/: CLI.md  INSTRUMENTATION.md  Makefile  README.md  RELEASE.md  REVIEW.md  TODO.md
src/app/engine/r2-core/: Cargo.toml
src/app/engine/r2-core/src/: config.rs  lib.rs  logging.rs  queue.rs  runner.rs  s3.rs
src/docs/: APPSTORE.md  CHANGELOG.md  YOUTUBE.md
src/gitbook/: .gitbook.yaml  README.md  SUMMARY.md
src/homebrew/: README.md
src/releases/: v0.1.0.md  v0.1.1.md
src/www/: 401.html  404.html  _redirects  about.html  articles.html  (+21 more)
www/: about.html  articles.html  index.html  install.sh  llms.txt  robots.txt  site.webmanifest  sitemap.xml
(+293 files in other folders)
