# r2-ffi/Cargo.toml — C FFI bridge for the Swift macOS app
# Compiles as a static library (.a) linked into the Xcode project via R2Bridge.

[package]
name = "r2-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
r2-core = { path = "../r2-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
tracing = "0.1"

[build-dependencies]
cbindgen = "0.27"
