# r2-core/Cargo.toml — Shared upload logic, config, queue, S3 client
# This crate is used by both the FFI bridge (r2-ffi) and the CLI (r2-cli).

[package]
name = "r2-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
directories = "5"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
keyring = "3"

[dev-dependencies]
tempfile = "3"
